# glm_cbot_kakao

./: .env.example  .gitignore  AGENTS.md  README.md  package.json
android_client/: local.properties  secrets.properties.example  settings.gradle
android_client/app/: build.gradle  proguard-rules.pro
android_client/app/src/main/: AndroidManifest.xml
android_client/app/src/main/cpp/: CMakeLists.txt  native-secrets.cpp
android_client/app/src/main/res/drawable/: box_button.xml  box_control.xml  box_terminal.xml  ic_dot_red.xml  ic_launcher_foreground.xml
codex_proxy/: .env.example  README.md  package-lock.json  package.json
codex_proxy/src/: config.ts  index.ts  server.ts  types.ts
codex_proxy/src/auth/: codex.ts
codex_proxy/src/codex/: client.ts
codex_proxy/src/shared/: sse.ts
docs/: CODEX_PROXY_PLAN.md  IMPLEMENTATION_CHECKLIST.md  PRD.md  SECURITY.md  STOCK_PROXY_PLAN.md  TRD.md
ref/: README.md  package-lock.json
ref/android_client/app/: build.gradle
ref/android_client/app/src/main/: AndroidManifest.xml
ref/docs/: PRD.md
ref/src/: main.ts
src/: main.ts
stock_proxy/: .env.example  README.md  package-lock.json  package.json
stock_proxy/src/: config.ts  index.ts  server.ts  types.ts
stock_proxy/src/market/: naver-korean-market.ts
stock_proxy/src/openai/: korean-market-summary.ts  responses.ts  sector-summary.ts  stock-compare-summary.ts
stock_proxy/src/query/: alias-dictionary.ts  sector-dictionary.ts  stock-query-parser.ts
stock_proxy/src/stock/: alpha-vantage.ts  naver-domestic.ts  provider-router.ts
(+76 files in other folders)
